Removed artifcatual nuclei.

--- a/notebooks/2_nuclei_selection_and_dot_assignment/1_plot_and_filter.ipynb
+++ b/notebooks/2_nuclei_selection_and_dot_assignment/1_plot_and_filter.ipynb
@@ -11,6 +11,8 @@
      "text": [
       "Loading required package: cowplot\n",
       "\n",
+      "Warning message:\n",
+      "“replacing previous import ‘vctrs::data_frame’ by ‘tibble::data_frame’ when loading ‘dplyr’”\n",
       "\n",
       "********************************************************\n",
       "\n",
@@ -280,6 +282,17 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Manually remove nuclei with overlapping bright artifacts\n",
+    "nfdata2 = nfdata2[!(sid==6 & nid == 31)]\n",
+    "nfdata2 = nfdata2[!(sid==7 & nid == 209)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
