--- a/notebooks/2_nuclei_selection_and_dot_assignment/2_dots_to_nuclei.ipynb
+++ b/notebooks/2_nuclei_selection_and_dot_assignment/2_dots_to_nuclei.ipynb
@@ -65,13 +65,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000000/1000000 [00:27<00:00, 35775.10it/s]\n",
-      "100%|██████████| 1000000/1000000 [00:27<00:00, 36355.01it/s]\n",
-      "100%|██████████| 1000000/1000000 [00:32<00:00, 30954.02it/s]\n",
-      "100%|██████████| 1000000/1000000 [00:31<00:00, 31375.95it/s]\n",
-      "100%|██████████| 1000000/1000000 [00:28<00:00, 35534.30it/s]\n",
-      "100%|██████████| 1000000/1000000 [00:26<00:00, 37440.92it/s]\n",
-      "100%|██████████| 1000000/1000000 [00:27<00:00, 36331.60it/s]\n"
+      "100%|██████████| 1000000/1000000 [00:28<00:00, 34499.71it/s]\n",
+      "100%|██████████| 1000000/1000000 [00:32<00:00, 30705.57it/s]\n",
+      "100%|██████████| 1000000/1000000 [00:29<00:00, 33645.80it/s]\n",
+      "100%|██████████| 1000000/1000000 [00:29<00:00, 33935.22it/s]\n",
+      "100%|██████████| 1000000/1000000 [00:32<00:00, 30403.74it/s]\n",
+      "100%|██████████| 1000000/1000000 [00:28<00:00, 34569.03it/s]\n",
+      "100%|██████████| 1000000/1000000 [00:32<00:00, 31106.45it/s]\n"
      ]
     }
    ],
@@ -88,41 +88,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000000/1000000 [00:28<00:00, 35138.27it/s]\n",
-      "100%|██████████| 1000000/1000000 [00:30<00:00, 32804.84it/s]\n",
-      "100%|██████████| 1000000/1000000 [00:27<00:00, 36529.58it/s]\n",
-      "100%|██████████| 1000000/1000000 [00:27<00:00, 37034.05it/s]\n",
-      "100%|██████████| 1000000/1000000 [00:27<00:00, 36915.63it/s]\n",
-      "100%|██████████| 1000000/1000000 [00:31<00:00, 31280.94it/s]\n",
-      "100%|██████████| 1000000/1000000 [00:27<00:00, 36059.21it/s]\n"
+      "100%|██████████| 1000000/1000000 [00:28<00:00, 34590.09it/s]\n",
+      "100%|██████████| 1000000/1000000 [00:26<00:00, 37659.23it/s]\n",
+      "100%|██████████| 1000000/1000000 [00:29<00:00, 34256.89it/s]\n",
+      "100%|██████████| 1000000/1000000 [00:31<00:00, 32150.04it/s]\n",
+      "100%|██████████| 1000000/1000000 [00:29<00:00, 33451.07it/s]\n",
+      "100%|██████████| 1000000/1000000 [00:29<00:00, 34098.94it/s]\n",
+      "100%|██████████| 1000000/1000000 [00:26<00:00, 37545.58it/s]\n"
      ]
     }
    ],
    "source": [
     "assign_dots_to_nuclei(root_path, \"60x\", \"raw\", \"dilated_labels_watershed\", 7, \".dilated_labels\", nthreads)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 864809/864809 [00:24<00:00, 35811.92it/s]\n",
-      "100%|██████████| 859091/859091 [00:24<00:00, 34426.89it/s]\n",
-      "100%|██████████| 865295/865295 [00:24<00:00, 35688.29it/s]\n",
-      "100%|██████████| 862729/862729 [00:23<00:00, 37276.92it/s]\n",
-      "100%|██████████| 858811/858811 [00:23<00:00, 36857.25it/s]\n",
-      "100%|██████████| 863661/863661 [00:23<00:00, 36460.70it/s]\n",
-      "100%|██████████| 862468/862468 [00:22<00:00, 37794.63it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "assign_dots_to_nuclei(root_path, \"20x\", \"dw\", \"dilated_labels_watershed_from60x\", 7, \".dilated_labels\", nthreads)"
    ]
   },
   {
@@ -134,18 +111,41 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000000/1000000 [00:26<00:00, 38135.89it/s]\n",
-      "100%|██████████| 1000000/1000000 [00:25<00:00, 38929.11it/s]\n",
-      "100%|██████████| 1000000/1000000 [00:27<00:00, 36631.04it/s]\n",
-      "100%|██████████| 1000000/1000000 [00:26<00:00, 37446.96it/s]\n",
-      "100%|██████████| 1000000/1000000 [00:27<00:00, 35941.99it/s]\n",
-      "100%|██████████| 1000000/1000000 [00:26<00:00, 38332.68it/s]\n",
-      "100%|██████████| 1000000/1000000 [00:27<00:00, 36742.11it/s]\n"
+      "100%|██████████| 864809/864809 [00:26<00:00, 32949.56it/s]\n",
+      "100%|██████████| 859091/859091 [00:29<00:00, 29495.11it/s]\n",
+      "100%|██████████| 865295/865295 [00:28<00:00, 30026.95it/s]\n",
+      "100%|██████████| 862729/862729 [00:27<00:00, 31822.37it/s]\n",
+      "100%|██████████| 858811/858811 [00:26<00:00, 32047.57it/s]\n",
+      "100%|██████████| 863661/863661 [00:28<00:00, 30180.29it/s]\n",
+      "100%|██████████| 862468/862468 [00:25<00:00, 33409.59it/s]\n"
      ]
     }
    ],
    "source": [
-    "assign_dots_to_nuclei(root_path, \"20x\", \"raw\", \"dilated_labels_watershed_from60x\", 7, \".dilated_labels\", nthreads)"
+    "assign_dots_to_nuclei(root_path, \"20x\", \"dw\", \"dilated_labels_watershed_from60x\", 7, \".dilated_labels.from_60x\", nthreads)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000000/1000000 [00:29<00:00, 33450.79it/s]\n",
+      "100%|██████████| 1000000/1000000 [00:31<00:00, 31889.39it/s]\n",
+      "100%|██████████| 1000000/1000000 [00:33<00:00, 30189.72it/s]\n",
+      "100%|██████████| 1000000/1000000 [00:30<00:00, 32522.53it/s]\n",
+      "100%|██████████| 1000000/1000000 [00:33<00:00, 29787.18it/s]\n",
+      "100%|██████████| 1000000/1000000 [00:30<00:00, 32286.60it/s]\n",
+      "100%|██████████| 1000000/1000000 [00:30<00:00, 32579.61it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "assign_dots_to_nuclei(root_path, \"20x\", \"raw\", \"dilated_labels_watershed_from60x\", 7, \".dilated_labels.from_60x\", nthreads)"
    ]
   }
  ],
